# AgentGameFakeAppApi

./: .gitignore  Agent API 接口文档.md  Project_doc.md  extracted_sessions_messages_merged.txt  llm_tool_schema.json  llm_tools_preset.json  model_api.md  pyproject.toml  run.sh  session1.txt  tags.txt  test.txt  修复指导书.txt
app/: __init__.py  main.py  schemas.py  settings.py
app/agent/: budget.py  dialogue.py  formatter.py  nlu.py  planner.py  ranker.py  service.py  state.py
app/clients/: __init__.py  base.py  exceptions.py  houses.py  landmarks.py
app/infra/: cache.py  logging.py  tool_recorder.py
tests/: test_agent_e2e.py  test_clients_mock.py  test_dialogue_context.py  test_formatter.py  test_nlu.py  test_planner.py  test_ranker.py
